<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="androidx.lifecycle.LiveData" />
        <import type="android.view.View"/>
        <variable
            name="adapter"
            type="com.example.sneakersapp.adapter.HomeAdapter" />

        <variable
            name="showProgress"
            type="LiveData&lt;Boolean>" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/sneaker_ship"
            app:titleTextColor="@color/primary"
            app:titleTextAppearance="@style/ToolbarTheme" />

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/popular"
            android:textColor="@color/black"
            android:textSize="@dimen/_textsize18"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_16dp"
            app:layout_constraintEnd_toStartOf="@id/sort_by_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintWidth_percent=".49" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sort_by_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="start"
            android:marqueeRepeatLimit="marquee_forever"
            android:minWidth="@dimen/_200dp"
            android:paddingStart="@dimen/_12dp"
            android:paddingEnd="@dimen/_12dp"
            android:singleLine="true"
            android:text="@string/sort_by"
            android:textSize="@dimen/_textsize20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_popular"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintWidth_percent=".49" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_12dp"
            app:adapter="@{adapter}"
            android:paddingBottom="@dimen/_2dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popular" />

        <ProgressBar
            android:id="@+id/progressBar_cyclic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="65dp"
            android:minWidth="65dp"
            android:visibility="@{showProgress ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>